// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminSchemaWithMigrations.updateAndValidate() > duplicate values 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Entity",
          ],
          "list": false,
          "name": "entity",
          "required": false,
          "type": "Entity",
        },
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "string",
          "required": false,
          "type": "String",
          "values": [
            {
              "value": "a",
            },
            {
              "value": "b",
            },
          ],
        },
        {
          "adminOnly": false,
          "entityTypes": [
            "Entity",
          ],
          "linkEntityTypes": [
            "Entity",
          ],
          "list": false,
          "name": "richText",
          "required": false,
          "richTextNodes": [
            "entity",
            "entityLink",
            "linebreak",
            "paragraph",
            "root",
            "tab",
            "text",
            "valueItem",
          ],
          "type": "RichText",
          "valueTypes": [
            "ValueType",
          ],
        },
        {
          "adminOnly": false,
          "list": false,
          "name": "valueItem",
          "required": false,
          "type": "ValueItem",
          "valueTypes": [
            "ValueType",
          ],
        },
      ],
      "name": "Entity",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "ValueType",
    },
  ],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > empty->entity with pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "aPattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^hello$",
    },
  ],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > field with index 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "uniqueIndex",
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [
    {
      "name": "uniqueIndex",
      "type": "unique",
    },
  ],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > field with matchPattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": "aPattern",
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^pattern$",
    },
  ],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > fields not updated are kept 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "string",
          "required": true,
          "type": "String",
          "values": [],
        },
        {
          "adminOnly": false,
          "integer": false,
          "list": false,
          "name": "number",
          "required": false,
          "type": "Number",
        },
        {
          "adminOnly": false,
          "list": false,
          "name": "boolean",
          "required": false,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > unused pattern is removed 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > update pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "aPattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^new-pattern$",
    },
  ],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing adminOnly value if not specified on field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": true,
          "list": false,
          "name": "field",
          "required": false,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing adminOnly value if not specified on value type update 1`] = `
{
  "entityTypes": [],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": true,
      "fields": [],
      "name": "Foo",
    },
  ],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing adminOnly, authKeyPattern value if not specified on entity type update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": true,
      "authKeyPattern": "aPattern",
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": "title",
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": ".*",
    },
  ],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing entityTypes value if not specified on Entity field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Foo",
          ],
          "list": false,
          "name": "field",
          "required": false,
          "type": "Entity",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing entityTypes, linkEntityTypes, valueTypes, richTextNodes values if not specified on RichText field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Foo",
          ],
          "linkEntityTypes": [
            "Foo",
          ],
          "list": false,
          "name": "field",
          "required": false,
          "richTextNodes": [
            "entity",
            "entityLink",
            "linebreak",
            "paragraph",
            "root",
            "tab",
            "text",
            "valueItem",
          ],
          "type": "RichText",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "Bar",
    },
  ],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing index, multiline, matchPattern values if not specified on String field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "anIndex",
          "list": false,
          "matchPattern": "aPattern",
          "multiline": true,
          "name": "field",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [
    {
      "name": "anIndex",
      "type": "unique",
    },
  ],
  "migrations": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": ".*",
    },
  ],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing integer value if not specified on Number field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "integer": true,
          "list": false,
          "name": "field",
          "required": false,
          "type": "Number",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing list value if not specified on field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": true,
          "matchPattern": null,
          "multiline": false,
          "name": "field",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing required value if not specified on field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "field",
          "required": true,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing valueTypes value if not specified on ValueItem field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "field",
          "required": false,
          "type": "ValueItem",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "Bar",
    },
  ],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() > use existing values value if not specified on String field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "field",
          "required": false,
          "type": "String",
          "values": [
            {
              "value": "hello",
            },
          ],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 1,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() deleteField > entity field (migration only) 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "deleteField",
          "entityType": "Foo",
          "field": "field",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() deleteField > entity field, replace with other field of same name 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "field",
          "required": false,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "deleteField",
          "entityType": "Foo",
          "field": "field",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() deleteField > entity name field with another field 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "anotherField",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "deleteField",
          "entityType": "Foo",
          "field": "field",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() deleteField > value item field (migration only) 1`] = `
{
  "entityTypes": [],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "deleteField",
          "field": "field",
          "valueType": "Foo",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "Foo",
    },
  ],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() migrations > include migrations for older versions 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "deleteField",
          "entityType": "Foo",
          "field": "two",
        },
      ],
      "version": 3,
    },
    {
      "actions": [
        {
          "action": "deleteField",
          "entityType": "Foo",
          "field": "one",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 3,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() renameField > entity field (migration only) 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "newField",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "renameField",
          "entityType": "Foo",
          "field": "field",
          "newName": "newField",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() renameField > entity field with other fields 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": true,
          "matchPattern": null,
          "multiline": false,
          "name": "one",
          "required": false,
          "type": "String",
          "values": [],
        },
        {
          "adminOnly": false,
          "integer": true,
          "list": false,
          "name": "newName",
          "required": false,
          "type": "Number",
        },
        {
          "adminOnly": false,
          "list": true,
          "name": "three",
          "required": false,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "renameField",
          "entityType": "Foo",
          "field": "two",
          "newName": "newName",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() renameField > entity name field, modify validations 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "newField",
          "required": false,
          "type": "String",
          "values": [
            {
              "value": "one",
            },
          ],
        },
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "anotherField",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": "newField",
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "renameField",
          "entityType": "Foo",
          "field": "field",
          "newName": "newField",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() renameField > entity rich text field, many validations 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": true,
          "entityTypes": [
            "Foo",
          ],
          "linkEntityTypes": [
            "Foo",
          ],
          "list": true,
          "name": "newName",
          "required": true,
          "richTextNodes": [
            "entity",
            "entityLink",
            "linebreak",
            "paragraph",
            "root",
            "tab",
            "text",
            "valueItem",
          ],
          "type": "RichText",
          "valueTypes": [
            "ValueItem",
          ],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "renameField",
          "entityType": "Foo",
          "field": "oldName",
          "newName": "newName",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "ValueItem",
    },
  ],
  "version": 2,
}
`;

exports[`AdminSchemaWithMigrations.updateAndValidate() renameField > value item field (migration only) 1`] = `
{
  "entityTypes": [],
  "indexes": [],
  "migrations": [
    {
      "actions": [
        {
          "action": "renameField",
          "field": "field",
          "newName": "newField",
          "valueType": "Foo",
        },
      ],
      "version": 2,
    },
  ],
  "patterns": [],
  "schemaKind": "admin",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "newField",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
    },
  ],
  "version": 2,
}
`;
